# docsense

./: .coverage  .dev_test_data_loaded  .env.example  .gitignore  .markdownlintignore  .replit  CLAUDE.md  LICENSE  PROJECTION_FAILURE_HANDLING_SUMMARY.md  README.md  SETUP_FROM_SCRATCH.md  Settings.java  docker-compose.yml  docs_server.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run.sh  security_scan.json  setup-doppler.sh  start-all.sh  start-backend.sh  test_conversion.py  test_lineage.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: specification-validation.yml
.hypothesis/constants/: 00a561004c44292d  00a5c0d2dae2b0a7  00b37e5067fe484e  019d2367d6204565  01bba0e7e0e2d61b  0254289009854299  04fea5020ad88436  05d151fc36a14e4d  07f262b18eb0444c  080f39f2cd2e236d  0851d79114659ff3  095c4965d80bd780  0aef2d1912cdf5cc  0b27d457dde0b9d3  0ba0001e507ccdc7  0bd9e8389ced85b8  0fd4212aebfe5d03  1104025c5c59bbc5  1269c8f302adb706  1304967d7346c889  15a5380510ff351f  1749330bf6da68df  17bb44782e11b225  1851f4d67dbf0c63  (+196 more)
client/: .env.example  .gitignore  package-lock.json  package.json  security_scan.json  vite.config.ts  vitest.config.ts
docs/: .prompts  GLOSSARY.md  IMPLEMENTATION_PLAN.md  VISION.md
scripts/: README.md  check_validation.py  enhance_test_jsons_with_semantic_ir.py  generate_test_documents.py  generate_test_documents_part2.py  generate_test_documents_part3.py  migrate_add_sequence_column.py  migrate_create_semantic_ir_table.py  run_validation.py
src/: __init__.py
tests/: conftest.py
(+458 files in other folders)
